<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M Cubed</string>
    <string name="title_game_fragment">Game</string>
    <string name="title_topics_fragment">Topics</string>
    <string name="title_settings_fragment">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="swipe_setting">Enable swipe to flip cube</string>
    <string name="fling_setting">Enable fling to flip cube</string>
    <string name="theme_setting">Select theme</string>
    <string name="topic_setting">Select game topic</string>
    <string name="show_highscore">Show high-scores</string>
    <string name="delete_highscore">Delete high-scores</string>
    <string name="show_sources">Show Sources</string>
    <string name="about">sample about app info</string>
    <string-array name="game_sizes">
                <item>2x2</item>
                <item>2x4</item>
                <item>3x4</item>
                <item>4x4</item>
    </string-array>
    <string-array name="themes">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="topics">
        <item>Fish</item>
        <item>Mammals</item>
        <item>Reptiles</item>
    </string-array>
    <string-array name="fish">
        <item>fishie 1</item>
        <item>fishie 2</item>
        <item>fishie 3</item>
    </string-array>
    <string-array name="topic_2">
        <item>item 1</item>
        <item>item 2</item>
    </string-array>
    <string-array name="topic_3">
        <item>item 1</item>
        <item>item 2</item>
    </string-array>

</resources>
